--- a/babybuddy/templates/error/404.html
+++ b/babybuddy/templates/error/404.html
@@ -6,8 +6,8 @@
 {% block content %}
     <h1>404 {% trans "Page Not Found" %}</h1>
     <div>
-        {% blocktrans trimmed with request_path=request_path %}
-            The path <code>{{ request_path }}</code> does not exist.
-        {% endblocktrans %}
-    </div>
+        {% blocktrans trimmed with path="<code>"|add:request_path|add"</code>"|safe %}
+        The path {{ path }} does not exist.
+    {% endblocktrans %}
+</div>
 {% endblock %}
