--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -9,10 +9,7 @@
         {% if form.errors %}
             <div class="alert alert-danger">
                 <p class="mb-0">
-                    {% blocktrans trimmed %}
-                        <strong>Oh snap!</strong> The two passwords did not
-                        match. Please try again.
-                    {% endblocktrans %}
+                    <strong>{% trans "Oh no!" %}</strong> {% trans "The two passwords did not match." %} {% trans "Please try again." %}
                 </p>
             </div>
         {% endif %}
