--- a/core/templates/core/child_confirm_delete.html
+++ b/core/templates/core/child_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n widget_tweaks %}
+{% load babybuddy i18n widget_tweaks %}
 {% block title %}
     {% trans "Delete a Child" %}
 {% endblock %}
@@ -15,11 +15,7 @@
 {% block content %}
     <form role="form" method="post">
         {% csrf_token %}
-        {% blocktrans trimmed %}
-            <h1>
-                Are you sure you want to delete <span class="text-info">{{ object }}</span>?
-            </h1>
-        {% endblocktrans %}
+        <h1>{% confirm_delete_text object %}</h1>
         <div class="form-group">
             <label for="{{ form.confirm_name.id_for_label }}">
                 {% trans "To confirm this action. Type the full name of the child below." %}
