--- a/core/templates/core/feeding_form.html
+++ b/core/templates/core/feeding_form.html
@@ -21,11 +21,9 @@
 {% endblock %}
 {% block content %}
     {% if object %}
-        {% blocktrans trimmed %}
-            <h1>
-                Update <span class="text-info">{{ object }}</span>
-            </h1>
-        {% endblocktrans %}
+        <h1>
+            {% trans Update %} <span class="text-info">{{ object }}</span>
+        </h1>
     {% elif request.resolver_match.url_name == 'bottle-feeding-add' %}
         <h1>{% trans "Add a Bottle Feeding" %}</h1>
     {% else %}
