--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -15,17 +15,12 @@
             {% if form.non_field_errors %}
                 {% for error in form.non_field_errors %}
                     <div class="alert alert-danger" role="alert">
-                        {% blocktrans trimmed %}
-                            <strong>Error:</strong> {{ error }}
-                        {% endblocktrans %}
+                        <strong>{% trans "Error" %}</strong>: {{ error }}
                     </div>
                 {% endfor %}
             {% elif form.errors %}
                 <div class="alert alert-danger" role="alert">
-                    {% blocktrans trimmed %}
-                        <strong>Error:</strong> Some fields have errors. See
-                        below for details.
-                    {% endblocktrans %}
+                    <strong>{% trans "Error" %}</strong>: {% trans "Some fields have errors. See below for details." %}
                 </div>
             {% endif %}
             <fieldset>
