--- a/babybuddy/templates/error/403_csrf_bad_origin.html
+++ b/babybuddy/templates/error/403_csrf_bad_origin.html
@@ -8,11 +8,9 @@
     <div class="px-2 py-5 bg rounded-3">
         <div class="container-fluid">
             <h2>{% trans "How to Fix" %}</h2>
-            {% blocktrans trimmed with origin=origin %}
-                Add <samp>{{ origin }}</samp> to the <code>CSRF_TRUSTED_ORIGINS</code>
-                environment variable. If multiple origins are required separate
-                with commas.
-            {% endblocktrans %}
-        </div>
+            {% blocktrans trimmed with value="<samp>"|add:origin|add:"</samp>"|safe variable="<code>CSRF_TRUSTED_ORIGINS</code>"|safe %}
+            Add {{ value }} to the {{ variable }} environment variable. If multiple origins are required separate with commas.
+        {% endblocktrans %}
     </div>
+</div>
 {% endblock %}
