--- a/core/templates/core/tag_form.html
+++ b/core/templates/core/tag_form.html
@@ -22,11 +22,9 @@
 {% endblock %}
 {% block content %}
     {% if object %}
-        {% blocktrans trimmed %}
-            <h1>
-                Update <span class="text-info">{{ object }}</span>
-            </h1>
-        {% endblocktrans %}
+        <h1>
+            {% trans Update %} <span class="text-info">{{ object }}</span>
+        </h1>
     {% else %}
         <h1>{% trans "Add a Tag" %}</h1>
     {% endif %}
