--- a/dashboard/templates/cards/pumping_last.html
+++ b/dashboard/templates/cards/pumping_last.html
@@ -5,10 +5,12 @@
 {% endblock %}
 {% block title %}
     {% if pumping %}
-        {% blocktrans trimmed with since=pumping.start|deltasince|duration_string:'m' time=pumping.start|time %}
-            <div>{{ since }} ago</div>
-            <small>{{ time }}</small>
-        {% endblocktrans %}
+        <div>
+            {% blocktrans trimmed with time_ago=pumping.start|deltasince|duration_string:'m' %}
+                {{ time_ago }} ago
+            {% endblocktrans %}
+        </div>
+        <small>{{ pumping.start|time }}</small>
     {% else %}
         {% trans "None" %}
     {% endif %}
