--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -29,6 +29,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-6" style="z-index: 2;">{% include 'timeline/_timeline.html' %}</div>
+            <div class="col-lg-8 offset-lg-4 col-md-6 offset-md-6 z-2">{% include 'timeline/_timeline.html' %}</div>
         </div>
     {% endblock %}
