--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -47,7 +47,7 @@
                             </div>
                         </td>
                         <td>
-                            <a href="{% url 'core:tag-detail' tag.slug %}">{{ tag.name }}</a>
+                            <a href="{% url 'core:tag' tag.slug %}">{{ tag.name }}</a>
                         </td>
                         <td class="text-center">
                             <span class="badge badge-pill me-1"
