Add links to entry history

--- a/babybuddy/static_src/fontello/css/babybuddy-ie7-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-ie7-codes.css
@@ -36,7 +36,7 @@
 .icon-child { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1ae;&nbsp;'); }
 .icon-feeding { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1b1;&nbsp;'); }
 .icon-activities { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1b3;&nbsp;'); }
-.icon-timeline { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1da;&nbsp;'); }
+.icon-history { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1da;&nbsp;'); }
 .icon-diaperchange { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf1f8;&nbsp;'); }
 .icon-sleep { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf236;&nbsp;'); }
 .icon-note { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xf249;&nbsp;'); }
