--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?67957580');
-  src: url('../font/babybuddy.eot?67957580#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?67957580') format('woff2'),
-       url('../font/babybuddy.woff?67957580') format('woff'),
-       url('../font/babybuddy.ttf?67957580') format('truetype'),
-       url('../font/babybuddy.svg?67957580#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?80800209');
+  src: url('../font/babybuddy.eot?80800209#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?80800209') format('woff2'),
+       url('../font/babybuddy.woff?80800209') format('woff'),
+       url('../font/babybuddy.ttf?80800209') format('truetype'),
+       url('../font/babybuddy.svg?80800209#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?67957580#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?80800209#babybuddy') format('svg');
   }
 }
 */
@@ -91,7 +91,7 @@
 .icon-child:before { content: '\f1ae'; } /* '' */
 .icon-feeding:before { content: '\f1b1'; } /* '' */
 .icon-activities:before { content: '\f1b3'; } /* '' */
-.icon-timeline:before { content: '\f1da'; } /* '' */
+.icon-history:before { content: '\f1da'; } /* '' */
 .icon-diaperchange:before { content: '\f1f8'; } /* '' */
 .icon-sleep:before { content: '\f236'; } /* '' */
 .icon-note:before { content: '\f249'; } /* '' */
