--- a/static/babybuddy/css/app.css
+++ b/static/babybuddy/css/app.css
@@ -12343,7 +12343,7 @@ textarea.form-control-lg {
 .icon-activities:before {
   content: "\f1b3";
 } /* '' */
-.icon-timeline:before {
+.icon-history:before {
   content: "\f1da";
 } /* '' */
 .icon-diaperchange:before {
