--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -42,6 +42,13 @@
                                         <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
+                                {% if perms.core.view_note %}
+                                    <a href="{% url 'core:note-history' note.id %}"
+                                       title="{% trans "Entry History" %}"
+                                       class="btn btn-secondary">
+                                        <i class="icon-history" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
                                 {% if perms.core.delete_note %}
                                     <a href="{% url 'core:note-delete' note.id %}" class="btn btn-danger">
                                         <i class="icon-delete" aria-hidden="true"></i>
