--- a/core/templates/core/pumping_list.html
+++ b/core/templates/core/pumping_list.html
@@ -45,6 +45,13 @@
                                             <i class="icon-update" aria-hidden="true"></i>
                                         </a>
                                     {% endif %}
+                                    {% if perms.core.view_pumping %}
+                                        <a href="{% url 'core:pumping-history' pumping.id %}"
+                                           title="{% trans "Entry History" %}"
+                                           class="btn btn-secondary">
+                                            <i class="icon-history" aria-hidden="true"></i>
+                                        </a>
+                                    {% endif %}
                                     {% if perms.core.delete_pumping %}
                                         <a href="{% url 'core:pumping-delete' pumping.id %}"
                                            class="btn btn-danger">
