--- a/core/templates/core/tag_list.html
+++ b/core/templates/core/tag_list.html
@@ -39,6 +39,13 @@
                                         <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
+                                {% if perms.core.view_tag %}
+                                    <a href="{% url 'core:tag-history' tag.id %}"
+                                       title="{% trans "Entry History" %}"
+                                       class="btn btn-secondary">
+                                        <i class="icon-history" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
                                 {% if perms.core.delete_tag %}
                                     <a href="{% url 'core:tag-delete' tag.slug %}" class="btn btn-danger">
                                         <i class="icon-delete" aria-hidden="true"></i>
