--- a/core/templates/core/temperature_list.html
+++ b/core/templates/core/temperature_list.html
@@ -43,6 +43,13 @@
                                         <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
+                                {% if perms.core.view_temperature %}
+                                    <a href="{% url 'core:temperature-history' temperature.id %}"
+                                       title="{% trans "Entry History" %}"
+                                       class="btn btn-secondary">
+                                        <i class="icon-history" aria-hidden="true"></i>
+                                    </a>
+                                {% endif %}
                                 {% if perms.core.delete_temperature %}
                                     <a href="{% url 'core:temperature-delete' temperature.id %}"
                                        class="btn btn-danger">
