--- a/dashboard/templates/dashboard/child_button_group.html
+++ b/dashboard/templates/dashboard/child_button_group.html
@@ -11,7 +11,7 @@
         <a href="{% url 'core:child' object.slug %}"
            class="btn"
            title="{% trans "Timeline" %}">
-            <i class="icon-timeline" aria-hidden="true"></i>
+            <i class="icon-history" aria-hidden="true"></i>
         </a>
         <a href="{% url 'reports:report-list' object.slug %}"
            class="btn"
