chore: Update djlint and format

--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -4,7 +4,11 @@
     <nav class="navbar navbar-expand-md navbar bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand me-2" href={% url "babybuddy:root-router" %}>
-                <img src="{% static "babybuddy/logo/icon-brand.png" %}" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="{% static "babybuddy/logo/icon-brand.png" %}"
+                     width="30"
+                     height="30"
+                     class="d-inline-block align-top"
+                     alt="">
                 <span class="d-none d-lg-inline-block">
                     <span class="text-primary">Baby</span> Buddy
                 </span>
