--- a/babybuddy/templates/registration/base.html
+++ b/babybuddy/templates/registration/base.html
@@ -4,7 +4,11 @@
 {% block page %}
     <div id="view-{{ request.resolver_match.view_name }}" class="container">
         <div class="text-center pt-3">
-            <img src="{% static "babybuddy/logo/icon-brand.png" %}" width="65" height="65" class="d-inline-block align-top" alt="">
+            <img src="{% static "babybuddy/logo/icon-brand.png" %}"
+                 width="65"
+                 height="65"
+                 class="d-inline-block align-top"
+                 alt="">
             <h1 class="d-none d-md-inline-block display-4 ms-2">
                 <span class="text-primary">Baby</span> Buddy
             </h1>
