--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -9,12 +9,21 @@
         <title>
             {% block title %}{% endblock %}
         | Baby Buddy</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}?v=20211218" />
-        <link rel="apple-touch-startup-image" href="{% static "babybuddy/root/apple-touch-startup-image.png" %}?v=20211218" />
-        <link rel="icon" type="image/svg+xml" href="{% static "babybuddy/root/favicon.svg" %}?v=20210925" />
-        <link rel="manifest" href="{% static "babybuddy/root/site.webmanifest" %}?v=20211225" />
-        <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}?v=20211218" color="#37abe9" />
-        <link rel="shortcut icon" href="{% static "babybuddy/root/favicon.ico" %}?v=20211218" />
+        <link rel="apple-touch-icon"
+              sizes="180x180"
+              href="{% static "babybuddy/root/apple-touch-icon.png" %}?v=20211218" />
+        <link rel="apple-touch-startup-image"
+              href="{% static "babybuddy/root/apple-touch-startup-image.png" %}?v=20211218" />
+        <link rel="icon"
+              type="image/svg+xml"
+              href="{% static "babybuddy/root/favicon.svg" %}?v=20210925" />
+        <link rel="manifest"
+              href="{% static "babybuddy/root/site.webmanifest" %}?v=20211225" />
+        <link rel="mask-icon"
+              href="{% static "babybuddy/root/safari-pinned-tab.svg" %}?v=20211218"
+              color="#37abe9" />
+        <link rel="shortcut icon"
+              href="{% static "babybuddy/root/favicon.ico" %}?v=20211218" />
         <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-title" content="Baby Buddy" />
