--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -57,6 +57,14 @@
                 </div>
             </fieldset>
             <fieldset>
+                <legend>{% trans "General" %}</legend>
+                <div class="form-group row">
+                    {% with form_settings.feeding_end as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
+                </div>
+            </fieldset>
+            <fieldset>
                 <legend>{% trans "Dashboard" %}</legend>
                 <div class="form-group row">
                     {% with form_settings.dashboard_refresh_rate as field %}
