Add support for custom color themes
* add theme setting to user settings using [color modes](https://getbootstrap.com/docs/5.3/customize/color-modes/) for theme switch
* add pink theme
* adjust templates and scss files with hardcoded dark values to use overwritable bootstrap css variables

--- a/babybuddy/static_src/scss/global.scss
+++ b/babybuddy/static_src/scss/global.scss
@@ -41,3 +41,7 @@
 .page-link-icon {
     padding: var(--bs-pagination-padding-y) calc(var(--bs-pagination-padding-x) / 1.75);
 }
+
+.navbar {
+    background-color: var(--bs-dark);
+}
