--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -3,7 +3,7 @@
 {% get_current_locale as LOCALE %}
 {% get_current_timezone as TIMEZONE %}
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="{{ user.settings.theme | default:'dark' }}">
     <head>
         <meta charset="utf-8" />
         <title>
