--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -1,7 +1,7 @@
 {% extends 'babybuddy/base.html' %}
 {% load babybuddy i18n static timers %}
 {% block nav %}
-    <nav class="navbar navbar-expand-md navbar bg-dark sticky-top">
+    <nav class="navbar navbar-expand-md navbar sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand me-2" href={% url "babybuddy:root-router" %}>
                 <img src="{% static "babybuddy/logo/icon-brand.png" %}"
