--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -55,6 +55,11 @@
                         {% include 'babybuddy/form_field.html' %}
                     {% endwith %}
                 </div>
+                <div class="form-group row">
+                    {% with form_settings.theme as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
+                </div>
             </fieldset>
             <fieldset>
                 <legend>{% trans "Dashboard" %}</legend>
